--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Karl Turenne
 logo: "C:\ Users\ Nathan\ OneDrive - Collège Montmorency\ Documents\ lito\ portfolio\background 1.webp"
 #description: text below image
 #show _downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-remote-theme
