--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Karl Turenne
 logo: "C:\ Users\ Nathan\ OneDrive - Collège Montmorency\ Documents\ lito\ portfolio\background 1.webp"
-#description: text below image
-#show _downloads: true
+description: text below image
+show _downloads: true
 theme: pages-themes/architect@v0.2.0
